# oden

./: .dockerignore  .env  .eslintrc.js  .gitignore  .prettierrc.js  .qovery.yml  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.test  README.md  docker-compose.yml  jest.config.js  meals.txt  package.json  release.config.js  rust-toolchain.toml  schools.json  sqlx-data.json  tsconfig-base.json  tsconfig.json
.github/: CODEOWNERS  ci.yml  dependabot.yml
.github/workflows/: ci.yml  docker.yml  munin.yml  release.yml  rust.yml
butler/: Cargo.toml
butler-http/: Cargo.toml  main.rs
butler-http/src/: errors.rs  lib.rs  main.rs
butler-http/src/routes/: mod.rs
butler-http/src/routes/menus/: mod.rs
butler-http/tests/: integration.rs
butler-indexer/: .env  Cargo.toml  Dockerfile
butler-indexer/src/: lib.rs  main.rs
butler-lib/: Cargo.toml
butler-lib/src/: errors.rs  lib.rs
butler-lib/src/menus/: day.rs  id.rs  meal.rs  mod.rs
butler-lib/src/menus/mashie/: mod.rs  scrape.rs
butler-lib/src/menus/supplier/: mod.rs
butler-lib/src/menus/supplier/kleins/: mod.rs
butler-lib/src/menus/supplier/sabis/: mod.rs
butler-lib/src/menus/supplier/skolmaten/: days.rs  mod.rs
butler-lib/src/types/: day.rs  menu.rs
butler-lib/src/util/: mod.rs
butler/src/menus/: day.rs  id.rs  mod.rs
butler/src/util/: mod.rs
database/: Cargo.toml
database/migrations/2021-11-07-121543_create_menus/: down.sql  up.sql
database/migrations/2021-11-07-135854_create_days/: down.sql  up.sql
database/migrations/2021-11-07-135854_create_meals/: down.sql  up.sql
database/src/: lib.rs  models.rs  schema.rs  smaztext.rs
database/src/models/: day.rs  meal.rs  menu.rs  mod.rs
database/src/types/: mod.rs  shocotext.rs  smaztext.rs
euphemism/: Cargo.toml  recipes.txt  sample.txt
euphemism/examples/: c1000.rs
euphemism/src/: detection.rs  index.rs  lib.rs  main.rs  position.rs  recipe.rs  search.rs  tokenizer.rs  util.rs
hed/: Cargo.toml
hed/fuzz/: Cargo.toml
hed/fuzz/fuzz_targets/: key.rs
hed/src/: archive.rs  lib.rs  main.rs  merge.rs
hugin/: Cargo.toml  Dockerfile  README.md
hugin/queries/: meals.sql
hugin/src/: day.rs  errors.rs  lib.rs  main.rs  meal.rs  menu.rs  util.rs
hugin/src/mashie/: mod.rs  scrape.rs
hugin/src/menu/: mod.rs  slug.rs
hugin/src/menus/: mod.rs
hugin/src/menus/mashie/: mod.rs  scrape.rs
hugin/src/menus/supplier/: matilda.rs  mod.rs  mpi.rs  sodexo.rs
hugin/src/menus/supplier/kleins/: fetch.rs  mod.rs
hugin/src/menus/supplier/sabis/: mod.rs
hugin/src/menus/supplier/skolmaten/: days.rs  fetch.rs  mod.rs
hugin/src/supplier/: kleins.rs  matilda.rs  mod.rs  mpi.rs  sabis.rs  sodexo.rs
hugin/src/supplier/kleins/: fetch.rs  mod.rs
hugin/src/supplier/skolmaten/: mod.rs
libshoco-sys/: Cargo.toml  build.rs
libshoco-sys/src/: bindings.rs  shoco.h  shoco_model.h
munin/: Cargo.toml  Dockerfile
munin-lib/: Cargo.toml  README.md
munin-lib/src/: day.rs  errors.rs  lib.rs  meal.rs
munin-lib/src/menus/: id.rs  meal.rs  mod.rs
munin-lib/src/menus/mashie/: mod.rs  scrape.rs
munin-lib/src/menus/supplier/: matilda.rs  mod.rs
munin-lib/src/menus/supplier/kleins/: mod.rs
munin-lib/src/menus/supplier/sabis/: mod.rs
munin-lib/src/menus/supplier/skolmaten/: days.rs  mod.rs
munin-lib/src/types/: day.rs  menu.rs  menu_slug.rs  mod.rs  slug.rs
munin-lib/src/util/: mod.rs
munin/src/: export.rs  exporter.rs  geosearch.rs  import.rs  index.rs  indexer.rs  lib.rs  main.rs  meili.rs  nlp.rs  util.rs
munin/src/index/: meili.rs  mod.rs
munin/src/mashie/: mod.rs  scrape.rs
munin/src/supplier/: kleins.rs  matilda.rs  mod.rs  mpi.rs  sabis.rs  sodexo.rs
munin/src/supplier/skolmaten/: mod.rs
oden-http/: Cargo.toml  Dockerfile  main.rs
oden-http/src/: errors.rs  lib.rs  main.rs
oden-http/src/routes/: mod.rs
oden-http/src/routes/menus/: mod.rs
oden-http/tests/: integration.rs
shoco/: Cargo.toml  README.md
shoco/benches/: compress.rs
shoco/fuzz/: Cargo.toml
shoco/fuzz/fuzz_targets/: compress.rs
shoco/src/: lib.rs
smaz/: Cargo.toml  README.md
smaz/benches/: benchmark.rs
smaz/examples/: codebook.rs
smaz/fuzz/: Cargo.toml
smaz/fuzz/fuzz_targets/: compress.rs  cycle.rs  decompress.rs
smaz/src/: lib.rs
src/: app.ts  errors.ts  index.ts  lib.rs  main.rs  menu-id.ts  server.ts  types.ts
src/api/: mod.rs
src/api/mashie/: README.md
src/api/skolmaten/: crawl.rs  mod.rs
src/errors/: mod.rs
src/menus/: day.rs  fetch-with-ua.ts  id.rs  index.ts  meal.rs  mod.rs  provider.rs  route-types.ts  universal-provider.ts
src/menus/mashie/: mod.rs  scrape.rs
src/menus/mpi/: mod.rs
src/menus/provider/: mod.rs  mpi.rs  sodexo.rs
src/menus/providers/: mod.rs  types.ts
src/menus/skolmaten/: days.rs  mod.rs
src/menus/sodexo/: mod.rs
src/providers/: index.ts  provider-routes.ts  route-types.ts  types.ts  x-provider.ts
src/providers/mashie/: days.ts  index.ts  menu.ts  schools.test.ts  schools.ts  types.ts  tz.ts  url.ts
src/providers/mpi/: index.ts
src/providers/skolmaten/: README.md  crawler.ts  days.ts  index.ts  menu.test.ts  menu.ts  parser.ts  request.test.ts  request.ts  school.ts  time-range.ts  types.ts  tz.ts
src/providers/sodexo/: index.ts
src/routes/: mod.rs
src/routes/menus/: mod.rs
src/types/: meal.ts  menu.ts  school.ts
src/upstream/: types.ts
src/upstream/mashie/: schools.test.ts  schools.ts  types.ts
src/upstream/skolmaten/: crawlSchools.ts  crawler.test.ts  (+5 more)
src/util/: mod.rs
src/utils/: dedup-meals.ts  dedupMeals.ts  fetch-retry.ts  parser.ts  polish-meals.ts  regex.ts  trim-title.ts
stor/: Cargo.toml
stor/migrations/: 20221209212317_init.sql  20230205110510_consecutive_failures.sql  20230207155143_meals.sql  20230207173902_reviews.up.sql
stor/src/: day.rs  db.rs  lib.rs  main.rs  meal.rs  menu.rs  review.rs
tests/: app.spec.ts  integration.rs  menu-id.spec.ts  tsconfig.json
tests/menus/: fetch-with-ua.spec.ts  universal-provider.spec.ts
tests/utils/: dedup-meals.spec.ts  fetch-retry.spec.ts  polish-meals.spec.ts  regex.spec.ts  trim-title.spec.ts
(+43 files in other folders)
