[workspace]
members = ["hugin", "euphemism", "munin", "stor"]

[workspace.dependencies]
clap = "4.0.18"
meilisearch-sdk = { version = "0.20.1", default-features = false }
stor = { path = "stor" }
uuid = "1.2.2"
osm = { git = "https://github.com/akeamc/osm.git", version = "0.1.0", default-features = false }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
