[package]
name = "butler-http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.3.0"
actix-web = "3.3.2"
butler = { path = "../butler" }
chrono = "0.4.19"
const_format = "0.2.22"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.30"
