[package]
name = "butler-indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
base64 = "0.13.0"
butler-lib = { path = "../butler-lib", features = ["meilisearch-sdk"] }
chrono = "0.4.19"
chrono-tz = "0.6.0"
futures = "0.3.17"
meilisearch-sdk = "0.11.0"
serde = { version = "1.0.130", features = ["derive"] }
tokio = { version = "1.13.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.29"
tracing-subscriber = { version = "0.3.1", features = ["env-filter"] }
