[package]
name = "database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
munin-lib = { path = "../munin-lib" }
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["chrono", "postgres"] }
meilisearch-sdk = { version = "0.11.0", optional = true }
serde = { version = "1.0.130", features = ["derive"] }
smaz = { path = "../smaz" }
