[package]
name = "database"
version = "0.2.2"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
munin-lib = { path = "../munin-lib", features = ["diesel"], version = "0.2.2" }
chrono = "0.4.19"
diesel = { version = "1.4.8", features = ["chrono", "postgres", "uuidv07"] }
meilisearch-sdk = { version = "0.13.0", optional = true }
serde = { version = "1.0.130", features = ["derive"] }
smaz = { path = "../smaz", version = "0.1.0" }
diesel_migrations = "1.4.0"
tracing = "0.1.29"
uuid = { version = "0.8.2", features = ["serde"] }
