[package]
name = "database"
version = "0.2.3"
edition = "2021"

[dependencies]
hugin = { workspace = true, features = ["diesel"] }
chrono = { workspace = true }
diesel = { workspace = true, features = ["chrono", "postgres", "uuidv07"] }
meilisearch-sdk = { workspace = true, optional = true }
serde = { version = "1.0.147", features = ["derive"] }
smaz = { path = "../smaz", version = "0.1.0" }
diesel_migrations = "2.0.0"
tracing = "0.1.34"
uuid = { workspace = true, features = ["serde"] }
