[package]
name = "euphemism"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cow-utils = "0.1.2"
deunicode = "1.3.1"
fst = "0.4.7"
itertools = "0.10.3"
levenshtein_automata = { version = "0.2.1", features = ["fst_automaton"] }
once_cell = "1.9.0"
rayon = "1.5.3"
reqwest = "0.11.9"
rust-stemmers = "1.2.0"
select = "0.5.0"
serde_json = "1.0.79"
slice-group-by = "0.3.0"
strsim = "0.10.0"
thiserror = "1.0.30"
tracing = "0.1.30"
tracing-subscriber = "0.3.8"
unicode-normalization = "0.1.19"

[dev-dependencies]
tokio = { version = "1.16.1", features = ["rt", "macros"] }
tokio-test = "0.4.2"

[features]
