[workspace]

[package]
name = "hed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
csv = "1.1.6"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
time = { version = "0.3.17", features = ["macros", "serde", "serde-human-readable"] }
uuid = { version = "1.2.1", features = ["serde"] }

[features]
