[workspace]

[package]
name = "hed"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-compression = { version = "0.3.15", features = ["zstd", "futures-io", "tokio"] }
clap = { version = "4.0.29", features = ["derive", "env"] }
csv = "1.1.6"
csv-async = { version = "1.2.4", features = ["tokio"] }
futures-core = "0.3.25"
futures-io = "0.3.25"
futures-util = "0.3.25"
pin-project = "1.0.12"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
thiserror = "1.0.37"
time = { version = "0.3.17", features = ["macros", "serde", "serde-human-readable"] }
tokio = { version = "1.22.0", features = ["full"] }
uuid = { version = "1.2.1", features = ["serde"] }

[features]
