[package]
name = "hugin"
version = "0.3.8"
edition = "2021"

[dependencies]
anyhow = "1.0.68"
axum = { version = "0.6.2", default-features = false, features = [
  "http1",
  "json",
  "tokio",
  "tower-log",
  "query",
] }
axum-tracing-opentelemetry = { version = "0.7.4", features = ["otlp"] }
dotenv = "0.15.0"
meilisearch-sdk = { workspace = true }
opentelemetry = { version = "0.18.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.11.0"
opentelemetry-semantic-conventions = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
sqlx = "0.6.2"
stor = { workspace = true }
thiserror = "1.0.38"
time = "0.3.17"
tokio = { version = "1.25.0", features = ["full"] }
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { workspace = true }
