[package]
name = "libshoco-sys"
version = "0.1.0"
edition = "2018"
links = "shoco"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.107"

[build-dependencies]
cc = { version = "1.0.71", features = ["parallel"] }
pkg-config = "0.3.22"
