[package]
name = "munin-lib"
version = "0.2.2"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["chrono", "postgres"], optional = true }
futures = "0.3.17"
lazy_static = "1.4.0"
reqwest = { version =  "0.11.6", features = ["json"] }
scraper = "0.12.0"
serde = { version = "1.0.130", features = ["derive"] }
strum = { version = "0.23.0", features = ["derive"] }
thiserror = "1.0.30"
tracing = "0.1.29"
url = "2.2.2"
urlencoding = "2.1.0"
uuid = { version = "0.8.2", features = ["v5"] }

[dev-dependencies]
serde_json = "1.0.78"
tokio = { version = "1.12.0", features = ["rt", "macros"] }
