[package]
name = "munin"
version = "0.2.8"
edition = "2021"

[dependencies]
database = { workspace = true, features = ["meilisearch-sdk"] }
hugin = { workspace = true, features = ["diesel"] }
chrono = { workspace = true }
chrono-tz = { workspace = true }
diesel = { workspace = true, features = ["postgres", "chrono"] }
dotenv = "0.15.0"
futures = "0.3.25"
meilisearch-sdk = { workspace = true }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
anyhow = "1.0.57"
csv = "1.1.6"
serde_json = "1.0.81"
sentry-tracing = "0.27.0"
sentry = "0.28.0"
clap = { workspace = true, features = ["derive", "env"] }
reqwest = "0.11.12"
itertools = "0.10.5"

[features]
