[package]
name = "munin"
version = "0.3.11"
edition = "2021"
repository = "https://github.com/skolorna/oden/"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.25"
meilisearch-sdk = { workspace = true }
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
anyhow = "1.0.57"
serde_json = "1.0.81"
clap = { workspace = true, features = ["derive", "env"] }
uuid = { workspace = true, features = ["serde"] }
stor = { workspace = true }
select = "0.6.0"
urlencoding = "2.1.2"
time = "0.3.17"
time-tz = "1.0.2"
serde_urlencoded = "0.7.1"
tempdir = "0.3.7"
sqlx = "0.6.2"
reqwest = { version = "0.11.13", features = ["json"] }
async_zip = "0.0.9"
tokio-stream = "0.1.11"
tokio-util = "0.7.4"
csv-async = { version = "1.2.5", features = ["tokio"] }
milli = { git = "https://github.com/meilisearch/milli", default-features = false }
osm = { workspace = true }
obkv = "0.2.0"
indicatif = "0.17.2"
geo = "0.23.1"
strum = "0.24.1"
trast-proto = { version = "0.2.0", git = "https://github.com/akeamc/trast", default-features = false }
tonic = "0.8.3"
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
