[package]
name = "oden-http"
version = "0.2.3"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6.0"
actix-web = "4.0.1"
munin-lib = { path = "../munin-lib", version = "0.2.3" }
chrono = "0.4.19"
chrono-tz = "0.6.1"
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.30"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
database = { path = "../database", version = "0.2.3" }
diesel = { version = "1.4.8", features = ["r2d2"] }
structopt = "0.3.26"
dotenv = "0.15.0"
r2d2 = "0.8.9"
tracing = "0.1.34"
