[package]
name = "oden-http"
version = "0.2.6"
edition = "2018"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
hugin = { path = "../hugin", version = "0.2.4" }
chrono = "0.4.19"
chrono-tz = "0.6.1"
futures = "0.3.21"
serde = { version = "1.0.137", features = ["derive"] }
thiserror = "1.0.31"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
database = { path = "../database", version = "0.2.3" }
diesel = { version = "1.4.8", features = ["r2d2"] }
structopt = "0.3.26"
dotenv = "0.15.0"
r2d2 = "0.8.9"
tracing = "0.1.34"
meilisearch-sdk = { version = "0.20.1", default-features = false }
