[package]
name = "oden-http"
version = "0.2.7"
edition = "2021"

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
clap = { workspace = true, features = ["derive", "env"] }
hugin = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
futures = "0.3.25"
serde = { version = "1.0.147", features = ["derive"] }
thiserror = "1.0.31"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
database = { workspace = true }
diesel = { workspace = true, features = ["r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
tracing = "0.1.34"
meilisearch-sdk = { workspace = true }
