[package]
name = "shoco"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libshoco-sys = { path = "../libshoco-sys" }

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "compress"
harness = false
